--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -8,4 +8,6 @@ body {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    color: blue;
+    background-color: red;
 }
