feat: manage command line and add dynamic file for css minifier

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -11,3 +11,10 @@ body {
     color: blue;
     background-color: red;
 }
+
+section {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
