feat: rename file

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -19,3 +19,11 @@ section {
   flex-wrap: wrap;
   background-color: yellow;
 }
+
+article {
+  width: 33%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background-color: aqua;
+}
