feat: prepare project for publish and update project version

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -27,3 +27,12 @@ article {
   flex-wrap: wrap;
   background-color: aqua;
 }
+
+article > div {
+  border:1px solid black;
+}
+
+.login #preferance {
+  width: 50%;
+  margin: 0auto;
+}
