--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -37,3 +37,12 @@ article > div {
   margin: 0auto;
   padding: 15px;
 }
+
+.login #submit {
+  border: 1px solid black;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
+}
