--- a/resources/css/test.css
+++ b/resources/css/test.css
@@ -1,24 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-section {
-  width: 80%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  border: 1px solid #555555;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-}
+* {margin: 0;padding: 0;}body {width: 100%;display: flex;justify-content: space-around;flex-wrap: wrap;}section {width: 80%;display: flex;justify-content: center;flex-wrap: wrap;border: 1px solid #555555;border-radius: 5px;-webkit-border-radius: 5px;-moz-border-radius: 5px;-ms-border-radius: 5px;-o-border-radius: 5px;}
